--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 |<%- include('includes/header') %>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
 <body>
-    <div>PRDUCTS PAGES</div>
+    <div>
+        <div>PRODUCT PAGE</div>
+        <div><%= member.memberNick%></div>
+    </div>
+
 </body>
+
 <%- include('includes/footer') %>
